--- a/A_dbms/templates/dbms/report/balance/balance-class-director.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-director.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>成都武侯中小企业融资担保有限责任公司在保项目分类统计表（按项目经理）</caption>
+        <caption>{{ PAGE_TITLE }}统计表（按项目经理）（{{ tf_r }}至{{ tl_r }}）</caption>
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
