--- a/A_dbms/templates/dbms/report/report-summry.html
+++ b/A_dbms/templates/dbms/report/report-summry.html
@@ -1,3 +1,4 @@
 <div class="panel panel-default">
     {% include 'dbms/report/summary/balance.html' %}
+    {% include 'dbms/report/summary/accrual.html' %}
 </div>
