--- a/A_dbms/templates/dbms/report/balance-class-article.html
+++ b/A_dbms/templates/dbms/report/balance-class-article.html
@@ -1,28 +1,36 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}{{ PAGE_TITLE }}{% endblock %}
+{% block extra-css %}
+    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/report-style.css' %}">
+    <link rel="stylesheet" media="print" href="{% static 'dbms/css/report-style.css' %}">
+    <link rel="stylesheet" media="print" href="{% static 'dbms/css/report-style-noprint.css' %}">
+{% endblock %}
 {% block  body %}
 
     {#    CLASS_LIST = [(1, '按品种'), (11, '按银行'), (21, '按区域'), (31, '按行业'), (35, '按项部门'),#}
     {#                  (41, '按项目经理'),(51, '按项目助理'), (61, '按风控专员'), (71, '按支行'), ]#}
-    <div style="width: 210mm; margin-left: auto; margin-right: auto;">
-        {% include 'dbms/report/balance_article/balance-class-filter.html' %}
-        {% if  kwargs.class_typ == 11 %}
-            {% include 'dbms/report/balance_article/balance-class-bank.html' %}
-        {% elif  kwargs.class_typ == 21 %}
+    <div style="width: 310mm; margin-left: auto; margin-right: auto;">
+        {% if PAGE_TITLE == '在保分类(按项目)' %}
+            {% include 'dbms/report/balance_article/balance-class-filter.html' %}
+        {% elif  PAGE_TITLE == '项目分类' %}
+            {% include 'dbms/report/balance_article/balance-class-filter-a.html' %}
+        {% endif %}
+        {% if  kwargs.c_typ == 2 %}
+            {% include 'dbms/report/balance_article/balance-class-stage.html' %}
+        {% elif  kwargs.c_typ == 21 %}
             {% include 'dbms/report/balance_article/balance-class-district.html' %}
-        {% elif  kwargs.class_typ == 31 %}
+        {% elif  kwargs.c_typ == 31 %}
             {% include 'dbms/report/balance_article/balance-class-idustry.html' %}
-        {% elif  kwargs.class_typ == 35 %}
+        {% elif  kwargs.c_typ == 35 %}
             {% include 'dbms/report/balance_article/balance-class-depart.html' %}
-        {% elif  kwargs.class_typ == 41 %}
+        {% elif  kwargs.c_typ == 41 %}
             {% include 'dbms/report/balance_article/balance-class-director.html' %}
-        {% elif  kwargs.class_typ == 51 %}
+        {% elif  kwargs.c_typ == 51 %}
             {% include 'dbms/report/balance_article/balance-class-assistant.html' %}
-        {% elif  kwargs.class_typ == 61 %}
+        {% elif  kwargs.c_typ == 61 %}
             {% include 'dbms/report/balance_article/balance-class-control.html' %}
-        {% elif  kwargs.class_typ == 71 %}
-            {% include 'dbms/report/balance_article/balance-class-branch.html' %}
-        {% elif  kwargs.class_typ == 81 %}
+        {% elif  kwargs.c_typ == 81 %}
             {% include 'dbms/report/balance_article/balance-class-organization.html' %}
         {% endif %}
     </div>
