--- a/A_dbms/templates/dbms/report/balance-class-provide.html
+++ b/A_dbms/templates/dbms/report/balance-class-provide.html
@@ -1,34 +1,39 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}{{ PAGE_TITLE }}{% endblock %}
+{% block extra-css %}
+    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/report-style.css' %}">
+    <link rel="stylesheet" media="print" href="{% static 'dbms/css/report-style.css' %}">
+    <link rel="stylesheet" media="print" href="{% static 'dbms/css/report-style-noprint.css' %}">
+{% endblock %}
 {% block  body %}
-
     {#    CLASS_LIST = [(1, '按品种'), (11, '按银行'), (21, '按区域'), (31, '按行业'), (35, '按项部门'),#}
     {#                  (41, '按项目经理'),(51, '按项目助理'), (61, '按风控专员'), (71, '按支行'), ]#}
     <div style="width: 210mm; margin-left: auto; margin-right: auto;">
         {% if PAGE_TITLE == '在保分类(按放款)' %}
             {% include 'dbms/report/balance/class-filter-balance.html' %}
-        {% elif  PAGE_TITLE == '发放分类(按放款)' %}
+        {% elif  PAGE_TITLE == '放款分类' %}
             {% include 'dbms/report/balance/class-filter-accrual.html' %}
         {% endif %}
         {% if kwargs.c_typ == 1 %}
             {% include 'dbms/report/balance/balance-class-breed.html' %}
-        {% elif  kwargs.c_typ == 11 %}
+        {% elif kwargs.c_typ == 11 %}
             {% include 'dbms/report/balance/balance-class-bank.html' %}
-        {% elif  kwargs.c_typ == 21 %}
+        {% elif kwargs.c_typ == 21 %}
             {% include 'dbms/report/balance/balance-class-district.html' %}
-        {% elif  kwargs.c_typ == 31 %}
+        {% elif kwargs.c_typ == 31 %}
             {% include 'dbms/report/balance/balance-class-idustry.html' %}
-        {% elif  kwargs.c_typ == 35 %}
+        {% elif kwargs.c_typ == 35 %}
             {% include 'dbms/report/balance/balance-class-depart.html' %}
-        {% elif  kwargs.c_typ == 41 %}
+        {% elif kwargs.c_typ == 41 %}
             {% include 'dbms/report/balance/balance-class-director.html' %}
-        {% elif  kwargs.c_typ == 51 %}
+        {% elif kwargs.c_typ == 51 %}
             {% include 'dbms/report/balance/balance-class-assistant.html' %}
-        {% elif  kwargs.c_typ == 61 %}
+        {% elif kwargs.c_typ == 61 %}
             {% include 'dbms/report/balance/balance-class-control.html' %}
-        {% elif  kwargs.c_typ == 71 %}
+        {% elif kwargs.c_typ == 71 %}
             {% include 'dbms/report/balance/balance-class-branch.html' %}
-        {% elif  kwargs.c_typ == 81 %}
+        {% elif kwargs.c_typ == 81 %}
             {% include 'dbms/report/balance/balance-class-organization.html' %}
         {% endif %}
     </div>
