--- a/A_dbms/templates/dbms/report/balance/balance-class-branch.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-branch.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>成都武侯中小企业融资担保有限责任公司在保项目分类统计表（按银行）</caption>
+        <caption>{{ PAGE_TITLE }}统计表（按支行）（{{ tf_r }}至{{ tl_r }}）</caption>
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
@@ -18,6 +18,7 @@
                 <td align="right">{{ branch.sum|floatformat:2 }}</td>
             </tr>
         {% endfor %}
+        {% include 'dbms/report/balance/balance-class.html' %}
         </tbody>
     </table>
 </div>
