--- a/A_dbms/templates/dbms/appraisal/summary/guarantee-th.html
+++ b/A_dbms/templates/dbms/appraisal/summary/guarantee-th.html
@@ -34,5 +34,5 @@
 <tr class="otr">{#所属行业#}
     <td class="bb">所属行业</td>
     <td class="bb" colspan="4">
-        {{ article_obj.custom.company_custome.idustry }}</td>
+        {{ article_obj.custom.idustry }}</td>
 </tr>
