--- a/A_dbms/templates/dbms/custom/modl/mod_form/custom-add.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/custom-add.html
@@ -29,6 +29,11 @@
         <div class="col-sm-9">{{ form_custom_add.genre }}</div>
         <label id="e_genre" class="pull-right"> {{ form_custom_add.genre.errors }} </label>
     </div>
+    <div class="form-group"><!--客户类型-->
+        <label for="id_custom_state" class="col-sm-3 control-label">{{ form_custom_add.custom_state.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_add.custom_state }}</div>
+        <label id="e_custom_state" class="pull-right"> {{ form_custom_add.custom_state.errors }} </label>
+    </div>
 
 </div>
 
