--- a/A_dbms/templates/dbms/provide/extra/js-repayment-del.html
+++ b/A_dbms/templates/dbms/provide/extra/js-repayment-del.html
@@ -5,8 +5,8 @@
     });
 
     function bindDelRepaymentB() {
-        console.log("bindDelRepaymentB");
-        $('#provide-repayment-tb').on('click', '.delRepaymentB', function () {
+        console.log("bindDelRepaymentB---");
+        $('#repayment-tb').on('click', '.delRepaymentB', function () {
             console.log("bindDelRepaymentB");
             var delRepaymentNid = $(this).parent().parent().attr('repayment-nid');
             console.log(delRepaymentNid);
