--- a/A_dbms/templates/dbms/report/provide/provide_list-table.html
+++ b/A_dbms/templates/dbms/report/provide/provide_list-table.html
@@ -28,8 +28,8 @@
                 <td align="right">{{ provide.provide_money }}</td>
                 <td align="right">{{ provide.notify.time_limit }}</td>
                 <td>{{ provide.notify.agree.branch.short_name }}</td>
-                <td>{{ provide.notify.agree.lending.summary.custom.company_custome.idustry }}</td>
-                <td>{{ provide.notify.agree.lending.summary.custom.company_custome.district }}</td>
+                <td>{{ provide.notify.agree.lending.summary.custom.idustry }}</td>
+                <td>{{ provide.notify.agree.lending.summary.custom.district }}</td>
                 <td>{{ provide.notify.agree.lending.summary.director.name }}</td>
                 <td>{{ provide.notify.agree.lending.summary.assistant.name }}</td>
                 <td>{{ provide.provide_date }}</td>
