--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -5,6 +5,7 @@
             <th>客户名称({{ custom_acount }})</th>
             <th>管户经理</th>
             <th>授信总额</th>
+            <th>在保余额</th>
             <th>流贷余额</th>
             <th>承兑余额</th>
             <th>保函余额</th>
@@ -26,6 +27,7 @@
                 {% endif %}
                 <td align="right">{{ custom.managementor }}</td>
                 <td align="right">{{ custom.credit_amount }}</td>
+                <td align="right">{{ custom.amount }}</td>
                 <td align="right">{{ custom.custom_flow }}</td>
                 <td align="right">{{ custom.custom_accept }}</td>
                 <td align="right">{{ custom.custom_back }}</td>
