--- a/A_dbms/templates/dbms/custom/custom/custom-table.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-table.html
@@ -1,14 +1,10 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
     <table class="table table-bordered table-hover table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
             <th>客户名称</th>
             <th>客户类型</th>
+            <th>管户经理</th>
             <th>联系地址</th>
             <th>联系人</th>
             <th>联系电话</th>
@@ -21,13 +17,12 @@
             <tr>
                 <td><a href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.name }}</a></td>
                 <td>{{ custom.get_genre_display }}</td>
+                <td>{{ custom.managementor }}</td>
                 <td>{{ custom.contact_addr }}</td>
                 <td>{{ custom.linkman }}</td>
                 <td>{{ custom.contact_num }}</td>
-                {% if custom.genre == 1 %}
-                    <td>{{ custom.company_custome.idustry.name }}</td>
-                    <td>{{ custom.company_custome.district.name }}</td>
-                {% endif %}
+                <td>{{ custom.idustry.name }}</td>
+                <td>{{ custom.district.name }}</td>
             </tr>
         {% endfor %}
         </tbody>
