--- a/A_dbms/templates/dbms/report/balance/balance-class-district.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-district.html
@@ -6,14 +6,18 @@
             <th>序号</th>
             <th>区域</th>
             <th>放款笔数</th>
-            <th>担保余额</th>
+            {% if PAGE_TITLE == '在保分类(按放款)' %}
+                <th>担保余额</th>
+            {% elif  PAGE_TITLE == '放款分类' %}
+                <th>发放额</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody>
         {% for district in provide_groups_district %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>{{ district.notify__agree__lending__summary__custom__company_custome__district__name }}</td>
+                <td>{{ district.notify__agree__lending__summary__custom__district__name }}</td>
                 <td align="right">{{ district.con }}</td>
                 <td align="right">{{ district.sum|floatformat:2 }}</td>
             </tr>
