--- a/A_dbms/templates/dbms/report/balance/balance-class-idustry.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-idustry.html
@@ -6,14 +6,18 @@
             <th>序号</th>
             <th>行业</th>
             <th>放款笔数</th>
-            <th>担保余额</th>
+            {% if PAGE_TITLE == '在保分类(按放款)' %}
+                <th>担保余额</th>
+            {% elif  PAGE_TITLE == '放款分类' %}
+                <th>发放额</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody>
         {% for idustry in provide_groups_idustry %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>{{ idustry.notify__agree__lending__summary__custom__company_custome__idustry__name }}</td>
+                <td>{{ idustry.notify__agree__lending__summary__custom__idustry__name }}</td>
                 <td align="right">{{ idustry.con }}</td>
                 <td align="right">{{ idustry.sum|floatformat:2 }}</td>
             </tr>
