--- a/A_dbms/templates/dbms/report/balance/balance-class-organization.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-organization.html
@@ -5,7 +5,11 @@
         <tr style="text-align: center">
             <th>放款银行</th>
             <th>放款笔数</th>
-            <th>担保余额</th>
+            {% if PAGE_TITLE == '在保分类(按放款)' %}
+                <th>担保余额</th>
+            {% elif  PAGE_TITLE == '放款分类' %}
+                <th>发放额</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody>
