--- a/A_dbms/templates/dbms/review/review/review-filter.html
+++ b/A_dbms/templates/dbms/review/review/review-filter.html
@@ -27,7 +27,7 @@
     {% endif %}
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="客户名称"
+            <input type="search" name="_s" class="form-control" placeholder="客户名称，管户经理"
                    value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
