--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -8,6 +8,7 @@
         {% include 'dbms/agree/scan/agree-summry.html' %}
         {% include 'dbms/agree/scan/agree-tab.html' %}
         {% include 'dbms/agree/modl/agree-edit-mod.html' %}
+        {% include 'dbms/agree/modl/agree-del-mod.html' %}
         {% include 'dbms/agree/modl/counter-add-mod.html' %}
         {% include 'dbms/agree/modl/counter-del-mod.html' %}
         {% include 'dbms/agree/modl/agree-sign-mod.html' %}
@@ -18,6 +19,7 @@
 
 {% block extra-js %}
     {% include 'dbms/agree/extra/js-agree-edit.html' %}
+    {% include 'dbms/agree/extra/js-agree-del.html' %}
     {% include 'dbms/agree/extra/js-counter-add.html' %}
     {% include 'dbms/agree/extra/js-counter-del.html' %}
     {% include 'dbms/agree/extra/js-agree-sign.html' %}
