--- a/A_dbms/templates/dbms/custom/custom/custom-table.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-table.html
@@ -9,6 +9,7 @@
             <th>联系人</th>
             <th>联系电话</th>
             <th>行业</th>
+            <th>行业代码</th>
             <th>区域</th>
         </tr>
         </thead>
@@ -22,6 +23,7 @@
                 <td>{{ custom.linkman }}</td>
                 <td>{{ custom.contact_num }}</td>
                 <td>{{ custom.idustry.name }}</td>
+                <td>{{ custom.idustry.code }}</td>
                 <td>{{ custom.district.name }}</td>
             </tr>
         {% endfor %}
