--- a/A_dbms/templates/dbms/report/summary/accrual.html
+++ b/A_dbms/templates/dbms/report/summary/accrual.html
@@ -13,6 +13,6 @@
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_custom' c_typ=21 t_typ=11 %}">
             客户分类统计表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <a class="btn btn-primary btn-sm " target="_blank" href="#">
-            追偿项目回款统计表</a></label>
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_dun' t_typ=0 %}">
+            追偿分类统计表</a></label>
 </div>
