--- a/A_dbms/templates/dbms/appraisal/modl/article-change-mod.html
+++ b/A_dbms/templates/dbms/appraisal/modl/article-change-mod.html
@@ -6,7 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="articleChangeModalLabel">项目签批：{{ article_obj.article_num }}
+                <h4 class="modal-title" id="articleChangeModalLabel">项目变更：{{ article_obj.article_num }}
                     <input style="display: none" name="article_id" value="{{ article_obj.id }}">
                 </h4>
             </div>
