--- a/A_dbms/templates/dbms/provide/provide/provide-table.html
+++ b/A_dbms/templates/dbms/provide/provide/provide-table.html
@@ -7,10 +7,10 @@
             <th>放款银行</th>
             <th>放款金额</th>
             <th>放款种类</th>
+            <th>续贷新增</th>
             <th>放款日期</th>
             <th>到期日</th>
             <th>项目经理</th>
-            <th>项目助理</th>
             {% if PAGE_TITLE == '归档管理' %}
                 <th>档案编号</th>
             {% else %}
@@ -36,10 +36,10 @@
                 <td>{{ provide.notify.agree.branch.short_name }}</td>
                 <td align="right">{{ provide.provide_money }}</td>
                 <td>{{ provide.get_provide_typ_display }}</td>
+                <td>{{ provide.get_new_old_display }}</td>
                 <td>{{ provide.provide_date }}</td>
                 <td>{{ provide.due_date }}</td>
                 <td>{{ provide.notify.agree.lending.summary.director.name }}</td>
-                <td>{{ provide.notify.agree.lending.summary.assistant.name }}</td>
                 {% if PAGE_TITLE == '归档管理' %}
                     <td>{{ provide.file_num|default_if_none:"" }}</td>
                 {% else %}
