--- a/A_dbms/templates/dbms/provide/provide_follow/provide-agree-table.html
+++ b/A_dbms/templates/dbms/provide/provide_follow/provide-agree-table.html
@@ -7,6 +7,7 @@
             <th>放款银行</th>
             <th>合同金额</th>
             <th>落实情况</th>
+            <th>项目状态</th>
         </tr>
         </thead>
         <tbody>
@@ -17,6 +18,7 @@
                 <td>{{ agree.branch.short_name }}</td>
                 <td>{{ agree.agree_amount }}</td>
                 <td>{{ agree.agree_remark }}</td>
+                <td>{{ agree.lending.summary.get_article_state_display }}</td>
             </tr>
         {% endfor %}
         </tbody>
