--- a/A_dbms/templates/dbms/warrant/overdu_storage/overdu-storage-table.html
+++ b/A_dbms/templates/dbms/warrant/overdu_storage/overdu-storage-table.html
@@ -8,6 +8,7 @@
             {#            <th>描述</th>#}
             <th>库存情况</th>
             <th>所属项目</th>
+            <th>项目状态</th>
         </tr>
         </thead>
         <tbody>
@@ -42,6 +43,7 @@
                 <td>{{ warrant.meeting_date|default_if_none:'' }}</td>
                 <td>{{ warrant.get_warrant_state_display}}</td>
                 <td>{{ warrant.lending_warrant.all.0.sure.lending.summary }}</td>
+                <td>{{ warrant.lending_warrant.all.0.sure.lending.summary.get_article_state_display }}</td>
             </tr>
         {% endfor %}
         </tbody>
