--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
@@ -15,7 +15,7 @@
                 <a class="btn btn-primary btn-sm " id="addStoragesB">出入库</a><!--#path('warrant/storages/'-->
             {% elif warrant_typ == 2 %}
                 <a class="btn btn-primary btn-sm " id="addOwerShip">添加产权证</a><!--#path('warrant/storages/'-->
-                <a class="btn btn-primary btn-sm " id="addPartOwer">共有人</a><!--#path('warrant/storages/'-->
+{#                <a class="btn btn-primary btn-sm " id="addPartOwer">共有人</a><!--#path('warrant/storages/'-->#}
                 <a class="btn btn-primary btn-sm " id="addEvaluateB">评估</a><!--#path('warrant/evaluate/'-->
                 <a class="btn btn-primary btn-sm " id="addHouseBagB">添加房产包</a><!--#path('warrant/storages/'-->
                 <a class="btn btn-primary btn-sm " id="addStoragesB">出入库</a><!--#path('warrant/storages/'-->
