--- a/A_dbms/templates/dbms/provide/extra/js-provide-add.html
+++ b/A_dbms/templates/dbms/provide/extra/js-provide-add.html
@@ -38,7 +38,8 @@
                     } else {
                         alert(arg.message);
                         $('#e_provide_typ').text(arg.forme.provide_typ);
-                        $('#e_provide_money').text(arg.forme.provide_money);
+                        $('#e_old_amount').text(arg.forme.old_amount);
+                        $('#e_new_amount').text(arg.forme.new_amount);
                         $('#e_provide_date').text(arg.forme.provide_date);
                         $('#e_due_date').text(arg.forme.due_date);
                     }
