--- a/A_dbms/templates/dbms/provide/agree/notify/tab/notify-provide.html
+++ b/A_dbms/templates/dbms/provide/agree/notify/tab/notify-provide.html
@@ -3,7 +3,9 @@
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
-            <th>放款金额</th>
+            <th>续贷金额</th>
+            <th>新增金额</th>
+            <th>放款总额</th>
             <th>放款种类</th>
             <th>放款日期</th>
             <th>到期日</th>
@@ -19,7 +21,9 @@
             <tr provide-nid="{{ provide.id }}">
                 <td><a href="{% url 'dbms:provide_scan' provide_id=provide.id %}"
                        target="_blank">{{ forloop.counter }}</a></td>
-                <td>{{ provide.provide_money }}</td>
+                <td align="left">{{ provide.old_amount }}</td>
+                <td align="left">{{ provide.new_amount }}</td>
+                <td align="left">{{ provide.provide_money }}</td>
                 <td>{{ provide.get_provide_typ_display }}</td>
                 <td>{{ provide.provide_date }}</td>
                 <td>{{ provide.due_date }}</td>
