--- a/A_dbms/templates/dbms/provide/modl/mod_form/provide-add.html
+++ b/A_dbms/templates/dbms/provide/modl/mod_form/provide-add.html
@@ -6,16 +6,16 @@
         <label id="e_provide_typ" class="pull-right">{{ form_provide_add.provide_typ.errors }}</label>
     </div>
 
-    <div class="form-group"><!--放款金额-->
-        <label for="id_provide_money" class="col-sm-3 control-label">{{ form_provide_add.provide_money.label }}：</label>
-        <div class="col-sm-9">{{ form_provide_add.provide_money }}</div>
-        <label id="e_provide_money" class="pull-right">{{ form_provide_add.provide_money.errors }}</label>
+    <div class="form-group"><!--续贷金额-->
+        <label for="id_old_amount" class="col-sm-3 control-label">{{ form_provide_add.old_amount.label }}：</label>
+        <div class="col-sm-9">{{ form_provide_add.old_amount }}</div>
+        <label id="e_old_amount" class="pull-right">{{ form_provide_add.old_amount.errors }}</label>
     </div>
 
-    <div class="form-group"><!--新增/续贷-->
-        <label for="id_new_old" class="col-sm-3 control-label">{{ form_provide_add.new_old.label }}：</label>
-        <div class="col-sm-9">{{ form_provide_add.new_old }}</div>
-        <label id="e_new_old" class="pull-right">{{ form_provide_add.new_old.errors }}</label>
+    <div class="form-group"><!--新增金额-->
+        <label for="id_new_amount" class="col-sm-3 control-label">{{ form_provide_add.new_amount.label }}：</label>
+        <div class="col-sm-9">{{ form_provide_add.new_amount }}</div>
+        <label id="e_new_amount" class="pull-right">{{ form_provide_add.new_amount.errors }}</label>
     </div>
 
     <div class="form-group"><!--放款日期-->
