--- a/A_dbms/templates/dbms/dun/extra/js-dun-stage-add.html
+++ b/A_dbms/templates/dbms/dun/extra/js-dun-stage-add.html
@@ -38,6 +38,7 @@
                         $('#e_stage_file').text(arg.forme.stage_file);
                         $('#e_stage_date').text(arg.forme.stage_date);
                         $('#e_stage_remark').text(arg.forme.stage_remark);
+                        $('#e_page_amout').text(arg.forme.page_amout);
                     }
                 }
             })
