--- a/A_dbms/templates/dbms/report/balance-class-dun.html
+++ b/A_dbms/templates/dbms/report/balance-class-dun.html
@@ -13,7 +13,7 @@
     <div style="width: 310mm; margin-left: auto; margin-right: auto;">
         {% include 'dbms/report/balance_dun/balance-class-filter.html' %}
         {% include 'dbms/report/balance_dun/balance-class-stage.html' %}
-        {% include 'dbms/report/balance_dun/balance-class-charge.html' %}
+{#        {% include 'dbms/report/balance_dun/balance-class-charge.html' %}#}
     </div>
 {% endblock %}
 
